pylayerstates/dsl/grammar/GrammarParser.py
# Generated from ./pylayerstates/dsl/grammar/Grammar.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class GrammarParser(Parser):
    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'state'",
        "'as'",
        "'->'",
        "'+'",
        "'^'",
        "'{'",
        "'}'",
        "'('",
        "')'",
        "':'",
        "';'",
    ]

    symbolicNames = [
        "<INVALID>",
        "STATE",
        "AS",
        "ARROW",
        "PLUS",
        "CARET",
        "LBRACE",
        "RBRACE",
        "LPAREN",
        "RPAREN",
        "COLON",
        "SEMICOLON",
        "IDENTIFIER",
        "INTEGER",
        "STRING",
        "BLOCK_COMMENT",
        "LINE_COMMENT",
        "PYTHON_COMMENT",
        "WS",
    ]

    RULE_program = 0
    RULE_stateDefinition = 1
    RULE_namedAs = 2
    RULE_stateBody = 3
    RULE_statement = 4
    RULE_entryStatement = 5
    RULE_transitionStatement = 6
    RULE_eventList = 7
    RULE_event = 8
    RULE_backwardDef = 9

    ruleNames = [
        "program",
        "stateDefinition",
        "namedAs",
        "stateBody",
        "statement",
        "entryStatement",
        "transitionStatement",
        "eventList",
        "event",
        "backwardDef",
    ]

    EOF = Token.EOF
    STATE = 1
    AS = 2
    ARROW = 3
    PLUS = 4
    CARET = 5
    LBRACE = 6
    RBRACE = 7
    LPAREN = 8
    RPAREN = 9
    COLON = 10
    SEMICOLON = 11
    IDENTIFIER = 12
    INTEGER = 13
    STRING = 14
    BLOCK_COMMENT = 15
    LINE_COMMENT = 16
    PYTHON_COMMENT = 17
    WS = 18

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateDefinition(self):
            return self.getTypedRuleContext(GrammarParser.StateDefinitionContext, 0)

        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

    def program(self):
        localctx = GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.stateDefinition()
            self.state = 21
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StateDefinitionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.symbol = None  # Token

        def LBRACE(self):
            return self.getToken(GrammarParser.LBRACE, 0)

        def stateBody(self):
            return self.getTypedRuleContext(GrammarParser.StateBodyContext, 0)

        def RBRACE(self):
            return self.getToken(GrammarParser.RBRACE, 0)

        def IDENTIFIER(self):
            return self.getToken(GrammarParser.IDENTIFIER, 0)

        def STATE(self):
            return self.getToken(GrammarParser.STATE, 0)

        def namedAs(self):
            return self.getTypedRuleContext(GrammarParser.NamedAsContext, 0)

        def SEMICOLON(self):
            return self.getToken(GrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_stateDefinition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStateDefinition"):
                listener.enterStateDefinition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStateDefinition"):
                listener.exitStateDefinition(self)

    def stateDefinition(self):
        localctx = GrammarParser.StateDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stateDefinition)
        self._la = 0  # Token type
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == GrammarParser.STATE:
                    self.state = 23
                    self.match(GrammarParser.STATE)

                self.state = 26
                localctx.symbol = self.match(GrammarParser.IDENTIFIER)
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == GrammarParser.AS:
                    self.state = 27
                    self.namedAs()

                self.state = 30
                self.match(GrammarParser.LBRACE)
                self.state = 31
                self.stateBody()
                self.state = 32
                self.match(GrammarParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == GrammarParser.STATE:
                    self.state = 34
                    self.match(GrammarParser.STATE)

                self.state = 37
                localctx.symbol = self.match(GrammarParser.IDENTIFIER)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == GrammarParser.AS:
                    self.state = 38
                    self.namedAs()

                self.state = 41
                self.match(GrammarParser.SEMICOLON)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamedAsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AS(self):
            return self.getToken(GrammarParser.AS, 0)

        def STRING(self):
            return self.getToken(GrammarParser.STRING, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_namedAs

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNamedAs"):
                listener.enterNamedAs(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNamedAs"):
                listener.exitNamedAs(self)

    def namedAs(self):
        localctx = GrammarParser.NamedAsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namedAs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(GrammarParser.AS)
            self.state = 45
            self.match(GrammarParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StateBodyContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StatementContext, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_stateBody

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStateBody"):
                listener.enterStateBody(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStateBody"):
                listener.exitStateBody(self)

    def stateBody(self):
        localctx = GrammarParser.StateBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stateBody)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << GrammarParser.STATE)
                    | (1 << GrammarParser.ARROW)
                    | (1 << GrammarParser.IDENTIFIER)
                )
            ) != 0:
                self.state = 47
                self.statement()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entryStatement(self):
            return self.getTypedRuleContext(GrammarParser.EntryStatementContext, 0)

        def stateDefinition(self):
            return self.getTypedRuleContext(GrammarParser.StateDefinitionContext, 0)

        def transitionStatement(self):
            return self.getTypedRuleContext(GrammarParser.TransitionStatementContext, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

    def statement(self):
        localctx = GrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.entryStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.stateDefinition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.transitionStatement()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntryStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.symbol = None  # Token

        def ARROW(self):
            return self.getToken(GrammarParser.ARROW, 0)

        def SEMICOLON(self):
            return self.getToken(GrammarParser.SEMICOLON, 0)

        def IDENTIFIER(self):
            return self.getToken(GrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_entryStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEntryStatement"):
                listener.enterEntryStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEntryStatement"):
                listener.exitEntryStatement(self)

    def entryStatement(self):
        localctx = GrammarParser.EntryStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_entryStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(GrammarParser.ARROW)
            self.state = 59
            localctx.symbol = self.match(GrammarParser.IDENTIFIER)
            self.state = 60
            self.match(GrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TransitionStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.fromSymbol = None  # Token
            self.toSymbol = None  # Token

        def ARROW(self):
            return self.getToken(GrammarParser.ARROW, 0)

        def COLON(self):
            return self.getToken(GrammarParser.COLON, 0)

        def eventList(self):
            return self.getTypedRuleContext(GrammarParser.EventListContext, 0)

        def SEMICOLON(self):
            return self.getToken(GrammarParser.SEMICOLON, 0)

        def IDENTIFIER(self, i: int = None):
            if i is None:
                return self.getTokens(GrammarParser.IDENTIFIER)
            else:
                return self.getToken(GrammarParser.IDENTIFIER, i)

        def backwardDef(self):
            return self.getTypedRuleContext(GrammarParser.BackwardDefContext, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_transitionStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTransitionStatement"):
                listener.enterTransitionStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTransitionStatement"):
                listener.exitTransitionStatement(self)

    def transitionStatement(self):
        localctx = GrammarParser.TransitionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_transitionStatement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            localctx.fromSymbol = self.match(GrammarParser.IDENTIFIER)
            self.state = 63
            self.match(GrammarParser.ARROW)
            self.state = 64
            localctx.toSymbol = self.match(GrammarParser.IDENTIFIER)
            self.state = 65
            self.match(GrammarParser.COLON)
            self.state = 66
            self.eventList()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == GrammarParser.LPAREN:
                self.state = 67
                self.backwardDef()

            self.state = 70
            self.match(GrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EventListContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def event(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.EventContext)
            else:
                return self.getTypedRuleContext(GrammarParser.EventContext, i)

        def PLUS(self, i: int = None):
            if i is None:
                return self.getTokens(GrammarParser.PLUS)
            else:
                return self.getToken(GrammarParser.PLUS, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_eventList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEventList"):
                listener.enterEventList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEventList"):
                listener.exitEventList(self)

    def eventList(self):
        localctx = GrammarParser.EventListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_eventList)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.event()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == GrammarParser.PLUS:
                self.state = 73
                self.match(GrammarParser.PLUS)
                self.state = 74
                self.event()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EventContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_event

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEvent"):
                listener.enterEvent(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEvent"):
                listener.exitEvent(self)

    def event(self):
        localctx = GrammarParser.EventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_event)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(GrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BackwardDefContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(GrammarParser.LPAREN, 0)

        def CARET(self):
            return self.getToken(GrammarParser.CARET, 0)

        def INTEGER(self):
            return self.getToken(GrammarParser.INTEGER, 0)

        def RPAREN(self):
            return self.getToken(GrammarParser.RPAREN, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_backwardDef

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBackwardDef"):
                listener.enterBackwardDef(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBackwardDef"):
                listener.exitBackwardDef(self)

    def backwardDef(self):
        localctx = GrammarParser.BackwardDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_backwardDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(GrammarParser.LPAREN)
            self.state = 83
            self.match(GrammarParser.CARET)
            self.state = 84
            self.match(GrammarParser.INTEGER)
            self.state = 85
            self.match(GrammarParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
